--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "highcharts": "^5.0.10",
     "jquery": "^3.1.1",
     "lodash": "^4.13.1",
-    "oclazyload": "^1.1.0"
+    "oclazyload": "^1.1.0",
+    "sass-loader": "^6.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
